--- a/tab.html
+++ b/tab.html
@@ -16,7 +16,7 @@
     <nav id="nav">
         <ul class="nav-links">
             <li><a href="" class="active">Tab</a></li>
-            <li><a href="">Note</a></li>
+            <li><a href="todo.html">Note</a></li>
             <li><a href="">Weather</a></li>
             <li><a href="">Color</a></li>
         </ul>
