--- a/tab.html
+++ b/tab.html
@@ -15,7 +15,7 @@
 <body>
     <nav id="nav">
         <ul class="nav-links">
-            <li><a href="" class="active">Tab</a></li>
+            <li><a href="./todo.html" class="active">Tab</a></li>
             <li><a href="todo.html">Note</a></li>
             <li><a href="">Weather</a></li>
             <li><a href="">Color</a></li>
