--- a/weather.html
+++ b/weather.html
@@ -40,7 +40,7 @@
             <h4>Winds peed: <span class="wind"> 6.2 km/h</span></h4>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
