--- a/tab.html
+++ b/tab.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
             <li><a href="./todo.html" class="active">Tab</a></li>
             <li><a href="todo.html">Note</a></li>
-            <li><a href="">Weather</a></li>
+            <li><a href="./weather.html">Weather</a></li>
             <li><a href="">Color</a></li>
         </ul>
     </nav>
