--- a/weather.html
+++ b/weather.html
@@ -16,9 +16,9 @@
 <body>
     <nav id="nav">
         <ul class="nav-links">
-            <li><a href="./todo.html" class="active">Tab</a></li>
+            <li><a href="./tab.html" >Tab</a></li>
             <li><a href="todo.html">Note</a></li>
-            <li><a href="">Weather</a></li>
+            <li><a href="weather.html" class="active">Weather</a></li>
             <li><a href="">Color</a></li>
         </ul>
     </nav>
