--- a/tab.html
+++ b/tab.html
@@ -21,7 +21,7 @@
             <li><a href="">Color</a></li>
         </ul>
     </nav>
-    <input type="text" id="input-el">
+    <input type="text" id="input-el" autofocus>
     <div class="btn-container">
         <button id="input-btn">Save Input</button>
         <button id="tab-btn">Save Tab</button>
