--- a/weather.html
+++ b/weather.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="card">
         <div class="search">
-            <input type="text" class="search-bar" placeholder="Search...">
+            <input type="text" class="search-bar" autofocus placeholder="Search...">
             <button>
                 <i class="fas fa-search"></i>
             </button>
