--- a/todo.html
+++ b/todo.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="./tab.html" >Tab</a></li>
                 <li><a href="todo.html" class="active">Note</a></li>
-                <li><a href="">Weather</a></li>
+                <li><a href="weather.html">Weather</a></li>
                 <li><a href="">Color</a></li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
             <h1>To Do List</h1>
         </header>
         <form>
-            <input type="text" class="todo-input">
+            <input type="text" class="todo-input" autofocus>
             <button class="todo-button" type="submit">
                 <i class="fas fa-plus-square"></i>
             </button>
