--- a/todo.html
+++ b/todo.html
@@ -19,7 +19,7 @@
                 <li><a href="./tab.html" >Tab</a></li>
                 <li><a href="todo.html" class="active">Note</a></li>
                 <li><a href="weather.html">Weather</a></li>
-                <li><a href="">Color</a></li>
+                <li><a href="hex.html">Color</a></li>
             </ul>
         </nav>
         <header>
