--- a/tab.html
+++ b/tab.html
@@ -18,7 +18,7 @@
             <li><a href="./todo.html" class="active">Tab</a></li>
             <li><a href="todo.html">Note</a></li>
             <li><a href="./weather.html">Weather</a></li>
-            <li><a href="">Color</a></li>
+            <li><a href="hex.html">Color</a></li>
         </ul>
     </nav>
     <input type="text" id="input-el" autofocus>
