--- a/weather.html
+++ b/weather.html
@@ -18,7 +18,7 @@
             <li><a href="./tab.html" >Tab</a></li>
             <li><a href="todo.html">Note</a></li>
             <li><a href="weather.html" class="active">Weather</a></li>
-            <li><a href="">Color</a></li>
+            <li><a href="hex.html">Color</a></li>
         </ul>
     </nav>
     <div class="card">
