color nav is finished
colors will be saved to local storage and be deleted

--- a/weather.html
+++ b/weather.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
             <li><a href="./tab.html" >Tab</a></li>
             <li><a href="todo.html">Note</a></li>
-            <li><a href="weather.html" class="active">Weather</a></li>
+            <li><a href="./weather.html" class="active">Weather</a></li>
             <li><a href="hex.html">Color</a></li>
         </ul>
     </nav>
