--- a/hex.html
+++ b/hex.html
@@ -6,8 +6,8 @@
     <title>Color Flipper || Hex</title>
 
     <!-- styles -->
-    <link rel="stylesheet" href="hex.css" />
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="hex.css" />
   </head>
 
   <body>
@@ -21,9 +21,9 @@
   </nav>
     
       <div class="container">
-        <h2>background color : <span class="color">#f1f5f8</span></h2>
+        <h2 class="color"><span >#f1f5f8</span></h2>
         <button class="btn btn-hero" id="btn">click me</button>
-        <button class="btn btn-hero" id="btn-save">Save</button>
+        <button class="btn btn-hero" id="btn-save-color">Save</button>
       </div>
       <div id="link-container">
         <ul id="ul-el">
