--- a/hex.html
+++ b/hex.html
@@ -15,7 +15,7 @@
       <ul class="nav-links">
           <li><a href="./tab.html" >Tab</a></li>
           <li><a href="todo.html" >Note</a></li>
-          <li><a href="">Weather</a></li>
+          <li><a href="./weather.html">Weather</a></li>
           <li><a href="hex.html" class="active">Color</a></li>
       </ul>
   </nav>
@@ -25,7 +25,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
         <button class="btn btn-hero" id="btn-save-color">Save</button>
       </div>
-      <div id="link-container">
+      <div id="hex-container">
         <ul id="ul-el">
          hello
         </ul>
