--- a/hex.html
+++ b/hex.html
@@ -25,7 +25,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
         <button class="btn btn-hero" id="btn-save-color">Save</button>
       </div>
-      <div id="hex-container">
+      <div id="link-container"class="hex-container">
         <ul id="ul-el">
          hello
         </ul>
