--- a/todo.html
+++ b/todo.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
-    <link rel="stylesheet" href="todo.css">
-    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <section class="section">
         <nav id="nav">
             <ul class="nav-links">
-                <li><a href="./tab.html" >Tab</a></li>
+                <li><a href="./tab.html">Tab</a></li>
                 <li><a href="todo.html" class="active">Note</a></li>
                 <li><a href="weather.html">Weather</a></li>
                 <li><a href="hex.html">Color</a></li>
             </ul>
         </nav>
-        <header>
-            <h1>To Do List</h1>
-        </header>
-        <form>
-            <input type="text" class="todo-input" autofocus>
-            <button class="todo-button" type="submit">
-                <i class="fas fa-plus-square"></i>
-            </button>
-            <div class="select">
-                <select name="todos" id="" class="filter-todo">
-                    <option  value="all">All</option>
-                    <option  value="completed">Completed</option>
-                    <option  value="uncompleted">Uncompleted</option>
-    
-                </select>
+        <div class="main-todo-container">
+            <header>
+                <h1>To Do List</h1>
+            </header>
+            <form>
+                <input type="text" class="todo-input" autofocus>
+                <button class="todo-button" type="submit">
+                    <i class="fas fa-plus-square"></i>
+                </button>
+                <div class="select">
+                    <select name="todos" id="" class="filter-todo">
+                        <option value="all">All</option>
+                        <option value="completed">Completed</option>
+                        <option value="uncompleted">Uncompleted</option>
+
+                    </select>
+                </div>
+            </form>
+            <div class="todo-container">
+                <ul class="todo-list"></ul>
             </div>
-        </form>
-        <div class="todo-container">
-            <ul class="todo-list"></ul>
         </div>
     </section>
     <script src="todo.js"></script>
 </body>
+
 </html>
