--- a/hex.html
+++ b/hex.html
@@ -23,16 +23,18 @@
       <li><a href="hex.html" class="active">Color</a></li>
     </ul>
   </nav>
-  <div class="hex-container">
-    <div class="container">
-      <h2>background color : <span id="color">#f1f5f8</span></h2>
-      <button class="btn btn-hero" id="btn">click me</button>
-      <button class="btn btn-hero" id="btn-save">Save</button>
-    </div>
-    <div id="link-container">
-      <ul id="ul-elm">
+  <div class="main-container">
+    <div class="hex-container">
+      <div class="container">
+        <h2>background color : <span id="color">#f1f5f8</span></h2>
+        <button class="btn btn-hero" id="btn">click me</button>
+        <button class="btn btn-hero" id="btn-save">Save</button>
+      </div>
+      <div id="link-container">
+        <ul id="ul-elm">
 
-      </ul>
+        </ul>
+      </div>
     </div>
   </div>
 
