--- a/tab.html
+++ b/tab.html
@@ -21,15 +21,17 @@
             <li><a href="hex.html">Color</a></li>
         </ul>
     </nav>
-    <input type="text" id="input-el" autofocus>
-    <div class="btn-container">
-        <button id="input-btn">Save Input</button>
-        <button id="tab-btn">Save Tab</button>
-        <button id="delete-btn">Delete All</button>
-    </div>
-    <div id="link-container">
-        <ul id="ul-el">
-        </ul>
+    <div class="main-container">
+        <input type="text" id="input-el" autofocus>
+        <div class="btn-container">
+            <button id="input-btn">Save Input</button>
+            <button id="tab-btn">Save Tab</button>
+            <button id="delete-btn">Delete All</button>
+        </div>
+        <div id="link-container">
+            <ul id="ul-el">
+            </ul>
+        </div>
     </div>
     <script src="./app.js"></script>
 </body>
