--- a/todo.html
+++ b/todo.html
@@ -26,7 +26,7 @@
                 <li><a href="hex.html">Color</a></li>
             </ul>
         </nav>
-        <div class="main-todo-container">
+        <div class="main-container">
             <header>
                 <h1>To Do List</h1>
             </header>
