--- a/weather.html
+++ b/weather.html
@@ -15,28 +15,30 @@
 <body>
     <nav id="nav">
         <ul class="nav-links">
-            <li><a href="./tab.html" >Tab</a></li>
+            <li><a href="./tab.html">Tab</a></li>
             <li><a href="todo.html">Note</a></li>
             <li><a href="weather.html" class="active">Weather</a></li>
             <li><a href="hex.html">Color</a></li>
         </ul>
     </nav>
-    <div class="card">
-        <div class="search">
-            <input type="text" class="search-bar" autofocus placeholder="Search...">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-        </div>
-        <div class="weather loading">
-            <h2>Weather in<span class="city"> Lodz</span></h2>
-            <h1><span class="temp">51°C</span></h1>
-            <div class="flex">
-                <img class="icon" src="" alt="">
-                <h4><span class="description">Cloudy</span></h4>
+    <div class="main-container">
+        <div class="card">
+            <div class="search">
+                <input type="text" class="search-bar" autofocus placeholder="Search...">
+                <button>
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
-            <h4>Humidity: <span class="humidity"> 60%</span></h4>
-            <h4>Wind speed: <span class="wind"> 6.2 km/h</span></h4>
+            <div class="weather loading">
+                <h2>Weather in<span class="city"> Lodz</span></h2>
+                <h1><span class="temp">51°C</span></h1>
+                <div class="flex">
+                    <img class="icon" src="" alt="">
+                    <h4><span class="description">Cloudy</span></h4>
+                </div>
+                <h4>Humidity: <span class="humidity"> 60%</span></h4>
+                <h4>Wind speed: <span class="wind"> 6.2 km/h</span></h4>
+            </div>
         </div>
     </div>
     <script src="weather.js"></script>
