--- a/hex.html
+++ b/hex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Color Flipper || Hex</title>
 
-  <!-- styles -->
+  <! styles --
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,31 +17,18 @@
 <body>
   <nav id="nav">
     <ul class="nav-links">
-      <li><a href="./tab.html">Tab</a></li>
-      <li><a href="todo.html">Note</a></li>
-      <li><a href="./weather.html">Weather</a></li>
-      <li><a href="hex.html" class="active">Color</a></li>
+      <li><a class="nav-a" href="./tab.html">Tab</a></li>
+      <li><a class="nav-a" href="todo.html">Note</a></li>
+      <li><a class="nav-a" href="./weather.html">Weather</a></li>
+      <li><a class="nav-a" href="hex.html" class="active">Color</a></li>
     </ul>
   </nav>
-  <div class="main-container">
-    <div class="hex-container">
-      <div class="container">
-        <h2>background color : <span id="color">#f1f5f8</span></h2>
-        <button class="btn btn-hero" id="btn">click me</button>
-        <button class="btn btn-hero" id="btn-save">Save</button>
-      </div>
-      <div id="link-container">
-        <ul id="ul-elm">
-
-        </ul>
-      </div>
-    </div>
-  </div>
 
 
-  <!-- javascript -->
+
+  <!- javascript --
   <script src="hex.js"></script>
 
 </body>
 
-</html>
+</html> -->
