--- a/todo.html
+++ b/todo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,30 +26,8 @@
                 <li><a href="hex.html">Color</a></li>
             </ul>
         </nav>
-        <div class="main-container">
-            <header>
-                <h1>To Do List</h1>
-            </header>
-            <form>
-                <input type="text" class="todo-input" autofocus>
-                <button class="todo-button" type="submit">
-                    <i class="fas fa-plus-square"></i>
-                </button>
-                <div class="select">
-                    <select name="todos" id="" class="filter-todo">
-                        <option value="all">All</option>
-                        <option value="completed">Completed</option>
-                        <option value="uncompleted">Uncompleted</option>
-
-                    </select>
-                </div>
-            </form>
-            <div class="todo-container">
-                <ul class="todo-list"></ul>
-            </div>
-        </div>
     </section>
     <script src="todo.js"></script>
 </body>
 
-</html>
+</html> -->
