--- a/tab.html
+++ b/tab.html
@@ -15,13 +15,13 @@
 <body>
     <nav id="nav">
         <ul class="nav-links">
-            <li><a href="./todo.html" class="active">Tab</a></li>
-            <li><a href="todo.html">Note</a></li>
-            <li><a href="./weather.html">Weather</a></li>
-            <li><a href="hex.html">Color</a></li>
+            <li><button type="button" class="nav-btn active" value="tab">Tab</button></li>
+            <li><button type="button" class="nav-btn" value="todo">Note</button></li>
+            <li><button type="button" class="nav-btn" value="weather">Weather</button></li>
+            <li><button type="button" class="nav-btn" value="hex">Color</button></li>
         </ul>
     </nav>
-    <div class="main-container">
+    <div class="main-container hide" id="tab">
         <input type="text" id="input-el" autofocus>
         <div class="btn-container">
             <button id="input-btn">Save Input</button>
@@ -33,7 +33,72 @@
             </ul>
         </div>
     </div>
+
+
+
+    <div class="main-container hide" id="todo">
+        <header>
+            <h1>To Do List</h1>
+        </header>
+        <form>
+            <input type="text" class="todo-input" autofocus>
+            <button class="todo-button" type="submit">
+                <i class="fas fa-plus-square"></i>
+            </button>
+            <div class="select">
+                <select name="todos" id="" class="filter-todo">
+                    <option value="all">All</option>
+                    <option value="completed">Completed</option>
+                    <option value="uncompleted">Uncompleted</option>
+
+                </select>
+            </div>
+        </form>
+        <div class="todo-container">
+            <ul class="todo-list"></ul>
+        </div>
+    </div>
+
+    <div class="main-container hide" id="weather">
+        <div class="card">
+            <div class="search">
+                <input type="text" class="search-bar" autofocus placeholder="Search...">
+                <button>
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <div class="weather loading">
+                <h2>Weather in<span class="city"> Lodz</span></h2>
+                <h1><span class="temp">51°C</span></h1>
+                <div class="flex">
+                    <img class="icon" src="" alt="">
+                    <h4><span class="description">Cloudy</span></h4>
+                </div>
+                <h4>Humidity: <span class="humidity"> 60%</span></h4>
+                <h4>Wind speed: <span class="wind"> 6.2 km/h</span></h4>
+            </div>
+        </div>
+    </div>
+    <div class="main-container hide" id="hex">
+        <div class="hex-container">
+            <div class="container">
+                <h2>background color : <span id="color">#f1f5f8</span></h2>
+                <button class="btn btn-hero" id="btn">click me</button>
+                <button class="btn btn-hero" id="btn-save">Save</button>
+            </div>
+            <div id="link-container">
+                <ul id="ul-elm">
+
+                </ul>
+            </div>
+        </div>
+    </div>
+    <script src="./main.js"></script>
     <script src="./app.js"></script>
+    <script src="todo.js"></script>
+    <script src="hex.js"></script>
+
+
 </body>
 
 </html>
