--- a/tab.html
+++ b/tab.html
@@ -16,9 +16,9 @@
     <nav id="nav">
         <ul class="nav-links">
             <li><a href="./todo.html" class="active">Tab</a></li>
-            <li><a href="todo.html">Note</a></li>
+            <li><a href="./todo.html">Note</a></li>
             <li><a href="./weather.html">Weather</a></li>
-            <li><a href="hex.html">Color</a></li>
+            <li><a href="./hex.html">Color</a></li>
         </ul>
     </nav>
     <input type="text" id="input-el" autofocus>
