--- a/todo.html
+++ b/todo.html
@@ -24,10 +24,12 @@
                 <li><a href="todo.html" class="active">Note</a></li>
                 <li><a href="weather.html">Weather</a></li>
                 <li><a href="hex.html">Color</a></li>
-            
+            </ul>
+        </nav>
         <div class="main-todo-container">
             <header>
-                
+                <h1>To Do List</h1>
+            </header>
             <form>
                 <input type="text" class="todo-input" autofocus>
                 <button class="todo-button" type="submit">
